--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,11 @@
+[05.29.2011] 1.01 (B1.6.5)
+ * The sort button can now be configured again
+ * Autoreplace now works most of the time in SMP
+
+[05.28.2011] 1.0 (B1.6.4)
+ * Updated to 1.6.4
+ * Changed defautl key from E to R
+
 [05.27.2011] 1.0 (B1.5_01)
  * Multiplayer support
  * Added autoreplace configuration
