--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,15 @@
+|==============================================================|
+| INVENTORY TWEAKS Mod - By Jimeo Wan (jimeo.wan at gmail.com) |
+| Changelog                                                    |
+|==============================================================|
+
+[06.04.2011] 1.04 (B1.6.6)
+ * The mod can now be installed through the mods folder
+     Now really compatible with MyCraft
+ * Autoreplace now selects the lowest stack first
+ * Fixed freeze when sorting several tools of same ID in SMP
+ * Added DEBUG rule to enable verbose logging
+ 
 [06.02.2011] 1.03 (B1.6.6)
  * Made the mod compatible with MyCraft Mod Manager
  * Added rectangle rules
