--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,9 @@
 | Changelog                                                    |
 |==============================================================|
 
+[07.02.2011] 1.06 (B1.7.2)
+ * Updated to 1.7.2
+
 [06.19.2011] 1.06 (B1.6.6)
  * Fixed a few things broken by the 1.05 update
  * Fixed autoreplace not working with signs
