--- a/changelog.txt
+++ b/changelog.txt
@@ -3,10 +3,11 @@
 | Changelog                                                    |
 |==============================================================|
 
-[07.10.2011] 1.10 (B1.7.3)
+[07.20.2011] 1.10 (B1.7.3)
  * Added three buttons on chests and dispensers to sort them
  * Added some missing items to item tree
  * Fixed a bug involving rectangle rules
+ * Eaten mushroom soups now always leave the hotbar on autoreplace
  
 |== 1.0X ======================================================|
  
