--- a/changelog.txt
+++ b/changelog.txt
@@ -12,7 +12,7 @@
      Added a link to edit both configuration files
 	 Added a link to the mod's documentation
  * Added a new special rule "LIMIT", to limit stacking [TODO]
- * Made picked up items go directly in the slot defined for sorting [TODO]
+ * Made picked up items go directly in the slot defined for sorting [DEBUG]
  * Autoreplace now triggers a sound [TODO]
 
 |== 1.1X ======================================================|
