--- a/changelog.txt
+++ b/changelog.txt
@@ -5,10 +5,11 @@
 
 [07.24.2011] 1.20 (B1.7.3)
  * Fixed the columns rule being reversed
+ * Moved the configuration files to the "config" folder
  * The tree file is now in XML for easier editing
  * Added a special settings menu to inventories
-     Created an option to hide chest buttons [TODO]
-     Created an option to replace the "DISABLEMIDDLECLICK" rule [TODO]
+     Created an option to hide chest buttons
+     Created an option to replace the "DISABLEMIDDLECLICK" rule
      Added a link to edit both configuration files
 	 Added a link to the mod's documentation
  * Added a new special rule "LIMIT", to limit stacking [TODO]
