Fixed autoreplace configuration

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@
  * Added a new special rule "LIMIT", to limit stacking [TODO]
  * Made picked up items go directly in the slot defined for sorting
  * Autoreplace now triggers a sound
+ * Fixed a bug regarding autoreplace customization
 
 |== 1.1X ======================================================|
 
