--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,11 @@
 | Changelog                                                    |
 |==============================================================|
 
-[07.24.2011] 1.20 Beta (B1.7.3)
+[07.30.2011] 1.21 (B1.7.3)
+ * Fixed the bug making a lot of keywords not work
+ * Added support for multiple configurations
+ 
+[07.27.2011] 1.20 (B1.7.3)
  * Fixed the columns rule being reversed
  * Moved the configuration files to the "config" folder
  * The tree file is now in XML for easier editing
