--- a/changelog.txt
+++ b/changelog.txt
@@ -3,9 +3,10 @@
 | Changelog                                                    |
 |==============================================================|
 
-[07.31.2011] 1.22 (B1.7.3)
- * Fixed the middle click glitches on chests
- * Middle click is automatically disabled when using Convenient Inventory
+[08.01.2011] 1.22 (B1.7.3)
+ * Really fixed the bug making a lot of keywords not work
+ * Middle click is now automatically disabled when Convenient Inventory's is on
+ * Fixed a performance issue introduced in 1.21
  
 [07.30.2011] 1.21 (B1.7.3)
  * Fixed the bug making a lot of keywords not work
