--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,11 @@
 | Changelog                                                    |
 |==============================================================|
 
+[08.05.2011] 1.23 (B1.7.3)
+ * The settings button is now available from the Aether mod inventory
+ * The "stuff" rule now also matches unknown mod items
+ * Better reloading behavior with multiple configurations
+ 
 [08.01.2011] 1.22 (B1.7.3)
  * Really fixed the bug making a lot of keywords not work
  * Middle click is now automatically disabled when Convenient Inventory's is on
