Fix for the 'stuck keys' bug, changed InvTweaksTree extension to .txt

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@
  * The "stuff" rule now also matches unknown mod items
  * Better reloading behavior with multiple configurations
  * Huge refactoring of the mod's code, to emerge a library for modders
+ * Changed the item tree extension to .txt
  
 [08.01.2011] 1.22 (B1.7.3)
  * Really fixed the bug making a lot of keywords not work
