--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,13 @@
 | Changelog                                                    |
 |==============================================================|
 
+[08.XX.2011] 1.31 (B1.7.3)
+ * Added shortcuts to switch between sorting configurations (0-9 + Sort)
+ * Up/Down shortcuts now work with the Forward/Backward keys
+ * Fixed the move all/drop shortcuts not working
+ * Fixed a freeze when sorting maps
+ * Fixed a freeze when using a shortcut while holding an item
+
 [08.16.2011] 1.30 (B1.7.3)
  * Added various shortcuts to move/drop/craft items
  * The mod has been tested and tweaked for the Aether mod
