--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,8 @@
 Latest changes
 ==============
 
-`[???] 1.43 (1.3.1) <???>`_
+`[08.17.2012] 1.43 (1.3.2) <???>`_
+ * Updated mod to Minecraft 1.3.2
  * Added button to define the sort key in the "..." menu
  * Added ability for texture packs to have custom buttons for the mod
  * Fixed sorting by damage
@@ -77,7 +78,7 @@ Latest changes
  * Fixed Ctrl + click to craft one item directly to the inventory
  * Fixed Up + Click for brewing stands not working with potions
  * Removed all custom Shift + Click behavior (it now acts as default Minecraft does)
- * Added sorting support for Red Power 2 and IC² containers
+ * Added sorting support for Red Power 2 and ICï¿½ containers
  * Rewrote sorting on pickup feature (...still not SMP compatible)
  
 *[01.14.2012] 1.36 (1.1)*
