--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,13 @@
 Latest changes
 ==============
 
+`[10.26.2012] 1.44 (1.4.2) <http://adf.ly/E3TGa>`_
+ * Updated mod and item list to Minecraft 1.4.2
+ * Added option to replace tools just before they break
+ * Added chest support for TerraFirmaCraft & Metallurgy (thank you Fostenel!)
+ * Removed the sort key from the now saturated Controls screen (use the "..." menu) 
+ * Updated translations
+    
 `[08.17.2012] 1.43 (1.3.2) <http://adf.ly/ByCxb>`_
  * Updated mod to Minecraft 1.3.2
  * Added button to define the sort key in the "..." menu
