--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@ Latest changes
  * Added Beta option to make the mod work on anti-cheat servers
  * Fixed the potato IDs in the item tree (delete config/InvTweaksTree.txt to refresh it)
  * Added Norwegian translation (thanks to mymusicmanager)
+ * Partially fixed the 1-9 + R shortcut to quickly switch between configs
  
 `[10.26.2012] 1.44 (1.4.2) <http://adf.ly/E3TGa>`_
  * Updated mod and item list to Minecraft 1.4.2
