--- a/invtweaks_docs/changelog.txt
+++ b/invtweaks_docs/changelog.txt
@@ -3,7 +3,13 @@
 Latest changes
 ==============
 
-`[11.15.2012] 1.45 (1.4.4) <???>`_
+`[01.17.2013] 1.50 (1.4.7) <http://adf.ly/HQeh4>`_
+ * Switched sources to MCP (= faster to update, easier to contribute)
+ * Middle click evens the stacks on crafting tables (thanks to InvTweaks-1.50-1.4.7.zip)
+ * Removed uneffective NoCheatPlus hack, put a help screen instead
+ * Fix chests being sometimes left open forever
+ 
+`[11.15.2012] 1.45 (1.4.4) <http://adf.ly/E3TGa>`_
  * Added Beta option to make the mod work on anti-cheat servers
  * Fixed the potato IDs in the item tree (delete config/InvTweaksTree.txt to refresh it)
  * Added Norwegian translation (thanks to mymusicmanager)
