--- a/invtweaks_docs/changelog.txt
+++ b/invtweaks_docs/changelog.txt
@@ -3,6 +3,12 @@
 Latest changes
 ==============
 
+`[03.10.2013] 1.51b (1.5) <http://www.mediafire.com/?7fra267h45hes30>`_
+ * Added support for Hopper GUI
+ * Fixed crash when viewing mod list
+ * Added logo file for mod list
+ * Fixed sorting in creative mode version of player inventory
+ 
 `[03.09.2013] 1.51 (1.5) <http://www.mediafire.com/?7fra267h45hes30>`_
  * Built with Minecraft Forge/FML instead of ModLoader
  * Additional support for grouping ores and tools of the same type
