Fix type in changelog.txt

--- a/invtweaks_docs/changelog.txt
+++ b/invtweaks_docs/changelog.txt
@@ -5,7 +5,7 @@ Latest changes
 
 `[03.15.2013] 1.52 (1.5) <http://www.mediafire.com/?x5yxgcnx2501fty>`_
  * Fixed NEI detection for larger than vanilla chests (ex. IronChests)
- * Implemented an optional server module to potentially help with mod items that cuse glitches with the normal mode
+ * Implemented an optional server module to potentially help with mod items that cause glitches with the normal mode
  * Updated tree file for MC1.5
  * Enabled shortcuts in creative mode (may by somewhat buggy)
  
