--- a/invtweaks_docs/changelog.txt
+++ b/invtweaks_docs/changelog.txt
@@ -2,15 +2,19 @@
 
 Latest changes
 ==============
-`1.55 (1.6.1/1.6.2) <http://build.technicpack.net/job/Inventory-Tweaks/56/artifact/build/out/InventoryTweaks-MC1.6.2-1.55-b56.jar>`_
-* Sort-on-pickup attempts no longer spam chat messages by repeatedly failing.
-* Auto-refill will now match metadata exactly on items with subtypes (wool, carpet, stained clay, etc.)
-* Major API update, to allow for mods that change the basic player inventory to add compatibility via API.
-* Sorting shortcut automatically disables itself when any standard text field is focused. (Ex: Anvil rename field)
-* Modded containers will never attempt to 'guess' where the main player inventory slots are. Ask the developer of the mod to use the API for compatibility issues.
-* Basic compatibility information can be added to a new configuration file 'InvTweaksCompatibility.xml'. (For modpack builders, this is not a substitute for using the API and will only work correctly for fixed-size chest-like containers)
-* Language files are now loaded using MC1.6's resource pack system, so they can be overriden or new languages added by resource packs.
-* The override button texture file should now be located at 'assets/inventorytweaks/textures/gui/button10px.png'
+`1.55b (1.6.2) <http://build.technicpack.net/job/Inventory-Tweaks/56/artifact/build/out/InventoryTweaks-MC1.6.2-1.55b-b61.jar>`_
+ * Fix reversed tree priority sorting.
+ * Fix translation format.
+ 
+`1.55 (1.6.2) <http://build.technicpack.net/job/Inventory-Tweaks/56/artifact/build/out/InventoryTweaks-MC1.6.2-1.55-b56.jar>`_
+ * Sort-on-pickup attempts no longer spam chat messages by repeatedly failing.
+ * Auto-refill will now match metadata exactly on items with subtypes (wool, carpet, stained clay, etc.)
+ * Major API update, to allow for mods that change the basic player inventory to add compatibility via API.
+ * Sorting shortcut automatically disables itself when any standard text field is focused. (Ex: Anvil rename field)
+ * Modded containers will never attempt to 'guess' where the main player inventory slots are. Ask the developer of the mod to use the API for compatibility issues.
+ * Basic compatibility information can be added to a new configuration file 'InvTweaksCompatibility.xml'. (For modpack builders, this is not a substitute for using the API and will only work correctly for fixed-size chest-like containers)
+ * Language files are now loaded using MC1.6's resource pack system, so they can be overriden or new languages added by resource packs.
+ * The override button texture file should now be located at 'assets/inventorytweaks/textures/gui/button10px.png'
 
 `[05.01.2013] 1.54 (1.5/1.5.1/1.5.2) <http://www.mediafire.com/?if4h9jdmoaf70dh>`_
  * Fixed an error with shortcuts while the inventory screen was shifted (ex. by potion/beacon effects).
